fix div overlapping

--- a/app/style/ReactSelectGlobal.less
+++ b/app/style/ReactSelectGlobal.less
@@ -271,7 +271,6 @@
   margin-top: -1px;
   max-height: 200px;
   position: absolute;
-  top: 100%;
   width: 100%;
   z-index: 101;
   -webkit-overflow-scrolling: touch;
