--- a/app/style/SendPage.less
+++ b/app/style/SendPage.less
@@ -151,7 +151,7 @@
   width: 260px;
   margin-left: 10px;
   margin-right: 10px;
-  z-index: 10;
+  position: relative;
 }
 
 .send-address-input {
